# DalitzModel

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  annotated.html  annotated.js  classes.html  dir_1c1225548a374eb36a780066adbec6c4.html  dir_1c1225548a374eb36a780066adbec6c4.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_rela.html  functions_s.html  functions_u.html  functions_v.html  functions_vars.html  functions_w.html  functions_z.html  functions_~.html  globals.html  (+17 more)
.ci/: build_docs.sh  travis_osx.sh
cfg/: babar2008.cfg  babar2010.cfg
d0/dee/: class_dalitz_model_1_1_configure_amplitude.html  class_dalitz_model_1_1_configure_amplitude.js
d1/d79/: random_8h.html  random_8h_source.html
d1/d8d/: class_dalitz_model_1_1_phase_space.html  class_dalitz_model_1_1_phase_space.js
d1/daf/: dalitzplot_8h.html  dalitzplot_8h_source.html
d1/db9/: coefficient_8h.html  coefficient_8h.js  coefficient_8h_source.html
d2/d0a/: class_dalitz_model_1_1_line_shape_1_1_rel_breit_wigner-members.html
d2/d2a/: parameter_8h.html  parameter_8h.js  parameter_8h_source.html
d2/da0/: class_dalitz_model_1_1_phase_space-members.html
d3/d07/: phasespace_8h.html  phasespace_8h.js  phasespace_8h_source.html
d3/d39/: class_dalitz_model_1_1_resonance.html  class_dalitz_model_1_1_resonance.js
d3/da6/: class_dalitz_model_1_1_parameter-members.html
d3/db2/: class_dalitz_model_1_1_config_file.html  class_dalitz_model_1_1_config_file.js
d4/d44/: namespace_dalitz_model_1_1_line_shape.html  namespace_dalitz_model_1_1_line_shape.js
d4/df4/: class_dalitz_model_1_1_random-members.html
d5/db6/: amplitude_8h.html  amplitude_8h.js  amplitude_8h_source.html
d5/ddb/: resonance_8h.html  resonance_8h.js  resonance_8h_source.html
d6/d63/: msgservice_8h.html  msgservice_8h.js  msgservice_8h_source.html
d6/d9a/: class_dalitz_model_1_1_coefficient.html  class_dalitz_model_1_1_coefficient.js
d7/d43/: class_dalitz_model_1_1_parameter.html  class_dalitz_model_1_1_parameter.js
d7/dc4/: class_dalitz_model_1_1_dalitz_plot.html  class_dalitz_model_1_1_dalitz_plot.js
d8/d72/: relbreitwigner_8h.html  relbreitwigner_8h_source.html
d8/d85/: class_dalitz_model_1_1_resonance-members.html
dict/: DalitzModelDict.h  DalitzModelDict.xml  DalitzModelLinkDef.h
doc/: doxyfile
include/: amplitude.h  clock.h  coefficient.h  configfile.h  configureamplitude.h  dalitzplot.h  lhcbstyle.h  msgservice.h  parameter.h  phasespace.h  random.h  resonance.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+33 more)
tests/: build_model.cpp  build_model_root.cpp
(+64 files in other folders)
